<resources>
    <string name="app_name">Event_Handling</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="email_address">Email Address</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="register">REGISTER</string>
    <string name="remember_me">Remember me</string>
    <string name="remember_mee">Remember Me!!</string>
    <string name="login">LogIn</string>
</resources>